--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON socket",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/smmoosavi/jsonsocket",
   "dependencies": {
     "debug": "^2.1.1"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
   }
 }
