--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonsocket",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha",
   "description": "JSON socket",
   "main": "index.js",
   "scripts": {
