--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JSON socket",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "coverage": "make coverage"
   },
   "repository": {
     "type": "git",
@@ -17,15 +18,29 @@
   ],
   "author": "smmoosavi",
   "license": "MIT",
+  "config": {
+    "blanket": {
+      "pattern": [
+        "lib"
+      ],
+      "data-cover-never": [
+        "node_modules"
+      ],
+      "data-cover-reporter-options": {
+        "relativepath": true
+      }
+    }
+  },
   "bugs": {
     "url": "https://github.com/smmoosavi/jsonsocket/issues"
   },
   "homepage": "https://github.com/smmoosavi/jsonsocket",
   "dependencies": {
-    "debug": "^2.1.1"
+    "debug": "^2.1.3"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
-    "mocha": "^2.1.0"
+    "blanket": "^1.1.6",
+    "chai": "^2.2.0",
+    "mocha": "^2.2.4"
   }
 }
